test/error/parse/ExpectBrace2Open.mod
MODULE ExpectBrace2Open;
VAR a: ARRAY 1 OF INTEGER;
BEGIN
  a] := 0;
END ExpectBrace2Open.
